@@ -29,12 +29,6 @@ extern "C" {
 #define BFFM_SETSTATUSTEXT (WM_USER + 100)
 #define BFFM_ENABLEOK (WM_USER + 101)
 #define BFFM_SETSELECTION (WM_USER + 102)
-#define CMIC_MASK_HOTKEY	SEE_MASK_HOTKEY
-#define CMIC_MASK_ICON	SEE_MASK_ICON
-#define CMIC_MASK_FLAG_NO_UI	SEE_MASK_FLAG_NO_UI
-#define CMDSTR_NEWFOLDER	"NewFolder"
-#define CMDSTR_VIEWLIST	"ViewList"
-#define CMDSTR_VIEWDETAILS	"ViewDetails"
 #define DVASPECT_SHORTNAME 2
 #define SHARD_PIDL	1
 #define SHARD_PATH	2
@@ -117,6 +111,7 @@ extern "C" {
 #endif
 #define REGSTR_PATH_SPECIAL_FOLDERS	REGSTR_PATH_EXPLORER TEXT("\\Shell Folders")
 #define CSIDL_DESKTOP	0
+#define CSIDL_INTERNET  1
 #define CSIDL_PROGRAMS	2
 #define CSIDL_CONTROLS	3
 #define CSIDL_PRINTERS	4
@@ -137,8 +132,14 @@ extern "C" {
 #define CSIDL_COMMON_PROGRAMS	23
 #define CSIDL_COMMON_STARTUP	24
 #define CSIDL_COMMON_DESKTOPDIRECTORY	25
+#define CSIDL_APPDATA   26
+#define CSIDL_PRINTHOOD 27
+#define CSIDL_ALTSTARTUP    29
 #define CSIDL_COMMON_ALTSTARTUP	30
 #define CSIDL_COMMON_FAVORITES	31
+#define CSIDL_INTERNET_CACHE   32
+#define CSIDL_COOKIES	33
+#define CSIDL_HISTORY	34
 #define CFSTR_SHELLIDLIST	"Shell IDList Array"
 #define CFSTR_SHELLIDLISTOFFSET	"Shell Object Offsets"
 #define CFSTR_NETRESOURCES	"Net Resource"
@@ -152,12 +153,25 @@ extern "C" {
 #define CMF_VERBSONLY	2
 #define CMF_EXPLORE	4
 #define CMF_RESERVED	0xffff0000
-#define GCS_VERB	0
-#define GCS_HELPTEXT	1
-#define GCS_VALIDATE	2
-#define CMDSTR_NEWFOLDER	"NewFolder"
-#define CMDSTR_VIEWLIST	"ViewList"
-#define CMDSTR_VIEWDETAILS	"ViewDetails"
+#define GCS_VERBA        0
+#define GCS_HELPTEXTA    1
+#define GCS_VALIDATEA    2
+#define GCS_VERBW        4
+#define GCS_HELPTEXTW    5
+#define GCS_VALIDATEW    6
+#define GCS_UNICODE      4
+#ifdef UNICODE
+#define GCS_VERB        GCS_VERBW
+#define GCS_HELPTEXT    GCS_HELPTEXTW
+#define GCS_VALIDATE    GCS_VALIDATEW
+#else
+#define GCS_VERB        GCS_VERBA
+#define GCS_HELPTEXT    GCS_HELPTEXTA
+#define GCS_VALIDATE    GCS_VALIDATEA
+#endif
+#define CMDSTR_NEWFOLDER	TEXT("NewFolder")
+#define CMDSTR_VIEWLIST		TEXT("ViewList")
+#define CMDSTR_VIEWDETAILS	TEXT("ViewDetails")
 #define CMIC_MASK_HOTKEY	SEE_MASK_HOTKEY
 #define CMIC_MASK_ICON	SEE_MASK_ICON
 #define CMIC_MASK_FLAG_NO_UI	SEE_MASK_FLAG_NO_UI
